--- a/src/common/css/components/tab-bottom.less
+++ b/src/common/css/components/tab-bottom.less
@@ -17,6 +17,17 @@
     line-height: 20px;
     color: #fff;
     text-align: center;
+    em{
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      padding: 0 6px;
+      margin: -20px -30px 0 0;
+      border-radius: 50%;
+      font-style: normal;
+      color: #fff;
+      background: red;
+    }
     &.active {
       background: #87c701;
     }
