--- a/src/common/css/page/message.less
+++ b/src/common/css/page/message.less
@@ -12,4 +12,45 @@
       color: #80bd01;
     }
   }
+  .msg-box{
+    .list{
+      li{
+        padding: 10px;
+        border-bottom: 1px solid #eee;
+        .user-headimg{
+          width: 38px;
+          height: 38px;
+          margin-right: 10px;
+          border-radius: 50%;
+          border: 1px solid #ddd;
+          background-size: cover;
+          background-color: #eee;
+        }
+        a{
+          color: #80bd01;
+        }
+        .name{
+          font-weight: bold;
+          line-height: 28px;
+          display: flex;
+          .time{
+            padding-left: 5px;
+            font-size: 12px;
+            font-weight: normal;
+            color: #999;
+          }
+        }
+        .dian-false{
+          width: 8px;
+          height: 8px;
+          margin-right: 5px;
+          border-radius: 50%;
+          background: red;
+        }
+        div a{
+          color: #80bd01;
+        }
+      }
+    }
+  }
 }
